--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@
 
 section {
     display: flex;
-    align-self: center;
+    justify-content: space-between;
   }
 
 .pic {
-    width:250px;
+    width:300px;
     height: auto;
 }
 
