--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
 .native {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 75px;
-    margin-top: 50px;
+    margin-top: 5%;
     position: relative;
     text-align: center;
 }
 
 section {
     display: flex;
-    padding: 75px;
+    padding: 5%;
     flex-wrap: wrap;
     justify-content: space-between;
   }
 
 .pic {
-    width: 350px;
+    width: 50%;
     height: auto;
 }
 
 article {
-    padding: 10px;
-    margin: 10px;
+    padding: 5%;
+    margin: 5%;
     background: rgba(97, 94, 94, 0.3);
 }
 
