--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,27 @@
 .native {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 75px;
-    margin-top: 5%;
+    margin-top: 50px;
     position: relative;
     text-align: center;
 }
 
 section {
     display: flex;
-    padding: 5%;
+    padding: 25px;
+    margin: 50px;
     flex-wrap: wrap;
     justify-content: space-between;
   }
 
 .pic {
-    width: 50%;
+    width: 350px;
     height: auto;
 }
 
 article {
-    padding: 5%;
-    margin: 5%;
+    padding: 30px;
+    margin: 10px;
     background: rgba(97, 94, 94, 0.3);
 }
 
@@ -28,5 +29,4 @@ h2, h5 {
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
     color: #002280;
-
 }
